Story/ccls 2021 evidence upload (#215)
* story(ccls-2021): initial evidence upload dev

* story(ccls-2021): ongoing dev

* story(ccls-2021): add av scanning and doc save

* story(ccls-2021): remove document and evidence ticks

* story(ccls-2021): unit testing

* story(ccls-2021): dependencies

* story(ccls-2021): fix integration tests

* story(ccls-2021): updates following review

* story(ccls-2021): updates following review

* story(ccls-2021): additional unit tests